# bolib

./: .gitignore  .project  .vimrc_local  CMakeLists.txt  CheckGcov  Makefile  README.md  tests.txt
include/: compiler.h  compiler.h.in  int_type.h.in
include/common/: Iterator.h  List.h  ReadWrite.h  Str.h  types.h
include/file/: File.h  FilePath.h  RomFile.h  TextFile.h  libfile.h
src/common/: Iterator.c  Iterator.protected.h  List.c  List.protected.h  ReadWrite.c  Str.c
src/file/: File.c  File.protected.h  FilePath.c  RomFile.c  RomFile.protected.h  TextFile.c  TextFile.protected.h  libfile.c
src/msvc/: msvcfunc.c
tests/common/: IteratorTest.cpp  ListTest.cpp
tests/file/: RomFileTest.cpp
